--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ section{
 	position: relative;
 	height: 100vh;
 	width: 100%;
-	background-image: url('/images/bg.jpg');
+	background-image: url('./images/bg.jpg');
 	background-size: cover;
 	background-position: center;
 	display: flex;
